server/sonar-web/src/main/less/dsm.less
@import (reference) 'variables';
@import (reference) 'mixins';
@import (reference) 'ui';

@cellSize: 22px;

.dsm {

}


.dsm-legend {
  margin: 10px 0;

  & > li {
    display: inline-block;
  }

  & > li + li {
    margin-left: 20px;
  }
}

.dsm-legend-square {
  display: inline-block;
  vertical-align: middle;
  .size(14px, 14px);

  &.gray { background-color: @grey; }
  &.red { background-color: @red; }
  &.green { .dsm-usage-mixin; }
  &.blue { background-color: @blue; }
  &.yellow { .dsm-dependency-mixin; }
}

.dsm-legend-label {
  display: inline-block;
  vertical-align: middle;
  font-size: @baseFontSize;
}


.dsm-body td {
  border: 1px solid @barBorderColor;
}


.dsm-body-title {
  position: relative;
  vertical-align: middle;
  padding: 2px 15px 2px 4px;
  border-right: 2px solid darken(@barBorderColor, 8%) !important;
  color: @baseFontColor;
  cursor: pointer;
  white-space: nowrap;
  .link-no-underline;
  .trans(background-color);

  &:hover { background-color: @barBackgroundColor; }
}

.dsm-body-cell {
  min-width: 23px;
  padding: 2px 4px;
  .box-sizing(border-box);
  text-align: center;
  cursor: pointer;
  white-space: nowrap;
  .trans(background-color);
}

.dsm-body-cell-dependency {
  background-color: @grey;
}

.dsm-body-cell-cycle {
  background-color: @red !important;
  color: #fff !important;
}


.dsm-body-highlighted {
  background-color: #dff2fd;

  &:hover { background-color: #dff2fd; }
}

.dsm-body-usage, .dsm-body-usage:hover { .dsm-usage-mixin; }
.dsm-body-dependency, .dsm-body-dependency:hover { .dsm-dependency-mixin; }


.dsm-usage-mixin() {
  background-color: #e2ffbe;
}

.dsm-dependency-mixin() {
  background-color: #fde9cc;
}


.dsm-info {
  margin-top: 25px;

  th {
    padding: 2px 5px 7px;
    font-weight: 500;
  }

  td {
    padding: 2px 5px;

    &.changed { padding-top: 7px; }
  }
}

.dsm-body-title-package-tangles {
  float: right;
  margin: 0 -10px 0 10px;
  padding: 2px 5px;
  border-radius: 20px;
  background: @red;
  font-size: @smallFontSize;
  color: #fff;
}

